extension.css
.share-memex-container {
  min-width: 320px;
  font-size: 14px;
}

.share-memex-container span {
  font-family: var(--share-bloack-card-font-family-base);
}

.share-memex-container .rm-block-main,
.share-memex-container .rm-block-children {
  margin-right: 5px;
}

.share-memex-container .rm-block-main .rm-block-separator,
.share-memex-container .rm-block-children .rm-block-separator {
  display: none;
}

div.content {
  color: #323232;
  font-size: 14px;
}

div.content a,
div.content a:visited {
  color: rgb(19, 124, 189);
  text-decoration: none;
}
div.content span.tag {
  color: rgb(19, 124, 189);
}
div.content p {
  line-height: 1.8;
  min-height: 20px;
  margin: 0;
}

div.content ul,
div.content ol {
  -webkit-padding-start: 20px;
  padding-inline-start: 20px;
  margin: 0;
}
div.content li {
  line-height: 1.8;
}

div.content strong {
  font-weight: 9000;
}

#share-card-header .memo {
  padding: 10px 20px 5px;
  display: flex;
  /* justify-content: space-between; */
  /* align-items: center; */
  position: relative;

  flex-direction: column;
  align-items: flex-start;
}

#share-card-header .memo .author {
  width: 50%;
  font-size: 14px;
  color: #000000;
  display: flex;
  align-items: center;
  justify-content: left;
  margin-bottom: 5px;
}

#share-card-header .memo .author .at {
  font-size: 14px;
  font-family: var(--share-bloack-card-font-family-base);
  font-weight: bold;
  display: inline-block;
  vertical-align: middle;
}

#share-card-header .memo .author .username {
  font-size: 14px;
  font-family: var(--share-bloack-card-font-family-base);
  font-weight: bold;
  display: inline-block;
  vertical-align: middle;
}

/* 优化导出样式 */
#share-card-header .memo .time {
  width: 100%;
  font-family: var(--share-bloack-card-font-family-base);
  font-size: 14px;
  flex-grow: 1;
  /* text-align: right; */

  text-align: left;
  margin-bottom: 5px;
}

#share-card-header .memo ::after,
#share-card-header .memo ::before {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  height: 0;
}

#share-card-header .memo ::before {
  bottom: 7px; /* 稍微向上偏移 */
  border-bottom: 2px solid black; /* 更粗的线 */
  left: 3%;
  right: 3%;
}

#share-card-header .memo ::after {
  bottom: 0; /* 紧贴底部 */
  border-bottom: 1px solid black; /* 更细的线 */
  margin-bottom: 3px;
  left: 3%;
  right: 3%;
}

.share-memex-container #share-card-footer {
  width: 100%;
  padding-left: 0px;
  background-color: hsla(0, 1%, 24%, 0.118);
}

.share-memex-container #share-card-footer img {
  display: none;
  width: 100%;
}

#share-card-footer .footer {
  padding: 0 20px 5px;
  display: flex;
  /* justify-content: space-between; */
  /* align-items: center; */

  flex-direction: column;
  align-items: flex-start;
}

#share-card-footer .footer .via {
  padding-top: 5px;
  font-size: 14px;
  color: #9d9d9d;
  font-weight: bold;
}

#share-card-footer .footer .stat {
  padding-top: 5px;
  font-size: 14px;
  color: #9d9d9d;
  font-weight: bold;
}

:focus {
  outline: none !important;
}

